MID-9278 always use equals annotation now support marking "self" not only container items => test + bugfixes